Try to fix small slant rendering issue on ios

--- a/css/general.scss
+++ b/css/general.scss
@@ -177,12 +177,12 @@ section {
     color: $bodyBG;
   }
   > .section-mask {
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     position: absolute;
     &.reversed {
       bottom: auto;
-      top: 0;
+      top: -1px;
     }
   }
 }
